welcome.lessons.welcome.loopfor.LoopStairs.scala.error
Runner:14: error: not found: value baisse
baisse brosse();
^